--- a/src/package.json
+++ b/src/package.json
@@ -5,12 +5,17 @@
   "main": "index.js",
   "respository": "git@github.com:timothy-r/report.git",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node_modules/.bin/mocha --recursive test"
   },
   "author": "Tim Rodger tim.rodger@gmail.com",
   "dependencies": {
     "express": "~4.10.4",
     "body-parser": "~1.9.3",
     "winston": "~0.8.3"
+  },
+  "devDependencies": {
+    "should": "~4.3.0",
+    "mocha": "~2.0.1",
+    "mockman": "*"
   }
 }
