--- a/src/package.json
+++ b/src/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "respository": "git@github.com:timothy-r/report.git",
   "scripts": {
-    "test": "node_modules/.bin/mocha --recursive test"
+    "test": "node_modules/.bin/mocha --recursive ../test"
   },
   "author": "Tim Rodger tim.rodger@gmail.com",
   "dependencies": {
