Uses express csv to serve csv content

--- a/src/package.json
+++ b/src/package.json
@@ -4,7 +4,7 @@
   "description": "Generates tabular reports from arrays of json objects",
   "main": "index.js",
   "repository": {
-    "url" : "git@github.com:timothy-r/report.git",
+    "url": "git@github.com:timothy-r/report.git",
     "type": "git"
   },
   "scripts": {
@@ -14,7 +14,8 @@
   "dependencies": {
     "express": "~4.10.4",
     "body-parser": "~1.9.3",
-    "winston": "~0.8.3"
+    "winston": "~0.8.3",
+    "express-csv": "~0.6.0"
   },
   "devDependencies": {
     "should": "~4.3.0",
