--- a/src/package.json
+++ b/src/package.json
@@ -14,8 +14,7 @@
   "dependencies": {
     "express": "~4.10.4",
     "body-parser": "~1.9.3",
-    "winston": "~0.8.3",
-    "express-csv": "~0.6.0"
+    "winston": "~0.8.3"
   },
   "devDependencies": {
     "should": "~4.3.0",
